fixed vertical spacing

--- a/Meet The Team/team/_admin/assets/styles.css
+++ b/Meet The Team/team/_admin/assets/styles.css
@@ -2,7 +2,7 @@
     float:left;
     width: 122px;
     height: 236px;
-    margin:5px;
+    margin:5px 25px 5px 5px;    
     padding:10px;
     border: 1px dotted #999;
     font-family: Myriad, Myriad-Pro, Arial;
